# crud-challenge

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
inventory_manager/: admin.py  tests.py  urls.py  views.py
inventory_manager/migrations/: 0001_initial.py  0002_delete_base_inventory_item.py  0003_inventory_item.py  0004_customer_merchant.py  0005_inventoryitem_delete_customer_and_more.py  0006_rename_inventoryitem_basicproduct.py  0007_remove_basicproduct_quantity.py
inventory_manager/models/: BaseProduct.py  Base_Entity.py  Base_Inventory_Item.py  BasicProduct.py  Customer.py  Inventory_Item.py  Manufacturer.py  Merchant.py
inventory_manager/serializers/: BasicProductSerializer.py  inventory_item_serializer.py  manufacturer_serializer.py
inventory_manager/tests/: model_tests.py  test_models.py  test_views.py
inventory_tracker/: settings.py  urls.py
warehouse_manager/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
warehouse_manager/migrations/: 0001_initial.py  0002_warehouseinventoryitem.py  0003_alter_warehouseinventoryitem_item.py  0004_rename_warehouse_inventory_warehouseinventoryitem_quantity.py
warehouse_manager/models/: Warehouse.py  WarehouseItem.py
warehouse_manager/tests/: test_models.py
