[tool.poetry]
name = "shopify-crud-challenge"
version = "0.1.0"
description = ""
authors = ["KimrAndrew <andrewrk1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-rest-framework = "^0.1.0"
whitenoise = "^6.0.0"
django-cors-headers = "^3.11.0"
gunicorn = "^20.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
